--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
+  video_player: ^2.8.3
+  audioplayers: ^5.2.1
+  chewie: ^1.7.5
 
 dev_dependencies:
   flutter_test:
