--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   video_player: ^2.8.3
   audioplayers: ^5.2.1
   chewie: ^1.7.5
+  
+  # Supabase dependencies
+  supabase_flutter: ^2.3.4
+  flutter_dotenv: ^5.1.0
+  go_router: ^14.2.7
+  riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -78,6 +87,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Black Ops One
+      fonts:
+        - asset: assets/fonts/BlackOpsOne-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
