--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   go_router: ^14.2.7
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
+  
+  # 공유 기능 패키지
+  share_plus: ^7.2.2
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +76,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/fonts/
+    - .env
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
